--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+   <div id ="mainMenu" style="display: flex;"> 
     <h1 class="title">Run for your life</h1>
-    <button type="button" class="startButton">START</button>
-    <canvas id = "canvas" width="1200" height="600"></canvas>
-    <script src="./logic.js"></script>
+    <button type="button" id="startButton" class="startButton">START</button>
+   </div>
+   <canvas id = "canvas" class="canvas" style="display: none" width="1200" height="600"></canvas>
+   <script src="./logic.js"></script>
 </body>
 </html>
