--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
    <div id ="mainMenu" style="display: flex;"> 
     <h1 class="title">Run for your life</h1>
+    <h2 class= "title">Press W to JUMP</h2>
     <button type="button" id="startButton" class="startButton">START</button>
    </div>
    <canvas id = "canvas" class="canvas" style="display: none" width="1200" height="600"></canvas>
